--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include setup.py README.md LICENSE.txt CHANGES.txt
-recursive-include django_youtube *.py *.html *.js
+recursive-include django_youtube *.py *.html
